Cleaned up code and moved to Jena 4.1.0